# openapi.json
@@ -737,10 +737,19 @@
             "type": "boolean"
           },
           "model": {
+            "minLength": 1,
             "title": "Model",
             "type": "string"
           },
           "provider": {
+            "enum": [
+              "anthropic",
+              "groq",
+              "huggingface",
+              "mistral",
+              "ollama",
+              "openai"
+            ],
             "title": "Provider",
             "type": "string"
           }
